--- a/sobre.html
+++ b/sobre.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre TPE</title>
 </head>
 <body>
-    <h1>Sobre o TPE</h1>
+    <h1>Projeto TPE</h1>
 </body>
 </html>
